Add about/privacy pages, validation checks, and target line

--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Results</title>
+  <title>About</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
@@ -18,8 +18,10 @@
     </div>
   </nav>
   <div class="container py-4">
-    <h1 class="h4 mb-3">Results</h1>
-    <p>Your results will appear here.</p>
+    <h1 class="h4 mb-3">About</h1>
+    <p>LC Points is an open-source points probability calculator for the Leaving Certificate.</p>
+    <p>The source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>.</p>
+    <p>For enquiries, email <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
