--- a/public/index.html
+++ b/public/index.html
@@ -68,10 +68,10 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-light sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand fw-semibold" href="#" style="color:#333;">LC Points</a>
+      <a class="navbar-brand fw-semibold" href="index.html" style="color:#333;">LC Points</a>
       <div class="d-flex align-items-center gap-3">
-        <a class="text-muted text-decoration-none" href="#">About</a>
-        <a class="text-muted text-decoration-none" href="#">Privacy</a>
+        <a class="text-muted text-decoration-none" href="about.html">About</a>
+        <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
         <a class="text-muted text-decoration-none" href="results.html">Results</a>
       </div>
     </div>
