--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Results</title>
+  <title>Privacy</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
@@ -18,8 +18,10 @@
     </div>
   </nav>
   <div class="container py-4">
-    <h1 class="h4 mb-3">Results</h1>
-    <p>Your results will appear here.</p>
+    <h1 class="h4 mb-3">Privacy</h1>
+    <p>This app stores your subject predictions anonymously in Google Firestore to calculate points probabilities.</p>
+    <p>Each prediction record includes your school name, target points, calculated mean, and expected points for each subject.</p>
+    <p>Source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>. For privacy questions, contact <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
