--- a/public/index.html
+++ b/public/index.html
@@ -205,6 +205,9 @@
               <div id="selectionNote" class="text-muted">No results yet — complete a few subjects and click <b>Finish & Calculate</b>.</div>
             </div>
           </div>
+          <div id="resultsLink" class="text-center mb-3" style="display:none;">
+            <a href="results.html">View Published Results</a>
+          </div>
 
           <div class="row g-3">
             <div class="col-12 col-lg-4">
