--- a/public/results.html
+++ b/public/results.html
@@ -19,8 +19,24 @@
   </nav>
   <div class="container py-4">
     <h1 class="h4 mb-3">Results</h1>
-    <p>Your results will appear here.</p>
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>School</th>
+            <th>Mean Points</th>
+            <th>Target Points</th>
+          </tr>
+        </thead>
+        <tbody id="resultsBody">
+          <tr><td colspan="3" class="text-muted">Loading...</td></tr>
+        </tbody>
+      </table>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore-compat.js"></script>
+  <script src="results.js" defer></script>
 </body>
 </html>
