Show link to other schools after publishing

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
             </div>
           </div>
           <div id="resultsLink" class="text-center mb-3" style="display:none;">
-            <a href="results.html">View Published Results</a>
+            <a href="results.html">See how other schools are scoring</a>
           </div>
 
           <div class="row g-3">
