--- a/public/privacy.html
+++ b/public/privacy.html
@@ -23,6 +23,8 @@
     <p>Each prediction record includes your school name, target points, calculated mean, and expected points for each subject.</p>
     <p>Source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>. For privacy questions, contact <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
+     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
