--- a/public/analytics.html
+++ b/public/analytics.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
-     crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy</title>
+  <title>Analytics</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
 <body>
@@ -21,10 +19,21 @@
     </div>
   </nav>
   <div class="container py-4">
-    <h1 class="h4 mb-3">Privacy</h1>
-    <p>This app stores your subject predictions anonymously in Google Firestore to calculate points probabilities.</p>
-    <p>Each prediction record includes your school name, target points, calculated mean, and expected points for each subject.</p>
-    <p>Source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>. For privacy questions, contact <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
+    <h1 class="h4 mb-3">Analytics</h1>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <h2 class="h5">Top Schools by Mean Points</h2>
+        <ol id="schoolList"><li class="text-muted">Loading...</li></ol>
+      </div>
+      <div class="col-md-6 mb-4">
+        <h2 class="h5">Top Subjects by Average Points</h2>
+        <ol id="subjectList"><li class="text-muted">Loading...</li></ol>
+      </div>
+    </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore-compat.js"></script>
+  <script src="analytics.js" defer></script>
 </body>
 </html>
