--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
         <a class="text-muted text-decoration-none" href="about.html">About</a>
         <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
         <a class="text-muted text-decoration-none" href="results.html">Results</a>
+        <a class="text-muted text-decoration-none" href="analytics.html">Analytics</a>
       </div>
     </div>
   </nav>
