--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About</title>
+  <meta name="description" content="Learn about LC Points, an open-source Leaving Cert points probability calculator." />
+  <meta name="keywords" content="About LC Points, Leaving Cert points calculator, points probabilities" />
+  <meta name="robots" content="index, follow" />
+  <title>About LC Points</title>
+  <meta property="og:title" content="About LC Points" />
+  <meta property="og:description" content="Information about the Leaving Cert points calculator project." />
+  <meta property="og:type" content="website" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
      crossorigin="anonymous"></script>
