--- a/public/analytics.html
+++ b/public/analytics.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Analytics</title>
+  <meta name="description" content="Explore top schools and subjects by average Leaving Cert points." />
+  <meta name="keywords" content="Leaving Cert analytics, points statistics, school performance" />
+  <meta name="robots" content="index, follow" />
+  <title>Leaving Cert Points Analytics</title>
+  <meta property="og:title" content="Leaving Cert Points Analytics" />
+  <meta property="og:description" content="See top schools and subjects by average Leaving Cert points." />
+  <meta property="og:type" content="website" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
      crossorigin="anonymous"></script>
