--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,31 @@
   
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Points Probability Calculator — Wizard</title>
+  <meta name="description" content="Interactive Leaving Cert points calculator that estimates your probability of reaching target points." />
+  <meta name="keywords" content="Leaving Cert points calculator, points probabilities, points prediction, Irish Leaving Certificate, LC points" />
+  <meta name="robots" content="index, follow" />
+  <title>Leaving Cert Points Calculator | Points Probability Wizard</title>
+  <meta property="og:title" content="Leaving Cert Points Calculator" />
+  <meta property="og:description" content="Estimate Leaving Cert points and view your chance of achieving target scores." />
+  <meta property="og:type" content="website" />
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
 
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Leaving Cert Points Calculator",
+    "url": "https://lcpoints.app/",
+    "applicationCategory": "EducationalApplication",
+    "operatingSystem": "Any",
+    "description": "Interactive calculator that predicts Leaving Cert points probabilities."
+  }
+  </script>
 
   <style>
     :root{
