--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy</title>
+  <meta name="description" content="Privacy policy for LC Points, the Leaving Cert points calculator." />
+  <meta name="keywords" content="privacy policy, LC Points, Leaving Cert points calculator" />
+  <meta name="robots" content="index, follow" />
+  <title>Privacy Policy | LC Points</title>
+  <meta property="og:title" content="Privacy Policy | LC Points" />
+  <meta property="og:description" content="Privacy policy for LC Points, the Leaving Cert points calculator." />
+  <meta property="og:type" content="website" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
      crossorigin="anonymous"></script>
