--- a/public/results.html
+++ b/public/results.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Results</title>
+  <meta name="description" content="Browse Leaving Cert points results and compare schools against target points." />
+  <meta name="keywords" content="Leaving Cert results, points comparison, school performance" />
+  <meta name="robots" content="index, follow" />
+  <title>Leaving Cert Points Results</title>
+  <meta property="og:title" content="Leaving Cert Points Results" />
+  <meta property="og:description" content="Browse Leaving Cert points results and compare schools against target points." />
+  <meta property="og:type" content="website" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
      crossorigin="anonymous"></script>
