--- a/public/about.html
+++ b/public/about.html
@@ -30,6 +30,9 @@
     <p>LC Points is an open-source points probability calculator for the Leaving Certificate.</p>
     <p>The source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>.</p>
     <p>For enquiries, email <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
+    <h2 class="h5 mt-4">How the results are calculated</h2>
+    <p>For each subject you enter the chance of receiving each grade. These probabilities are converted to points using the official Leaving Cert scale. The app combines the subjects using a dynamic programming approach that considers every possible grade combination for your best six subjects. From the resulting distribution we calculate the weighted mean, standard deviation and the probability of meeting your target.</p>
+    <p>This method accounts for every outcome rather than sampling at random, so the results are deterministic and easy to verify.</p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
