Fix hidden results section

--- a/public/index.html
+++ b/public/index.html
@@ -225,10 +225,8 @@
               <div id="selectionNote" class="text-muted">No results yet — complete a few subjects and click <b>Finish & Calculate</b>.</div>
             </div>
           </div>
-          <div id="scoringLink" class="my-4" style="display:none;">
+          <div id="resultsLink" class="my-4" style="display:none;">
             <a href="scoring.html" class="btn btn-main btn-lg w-100 py-3 fs-4">See how other schools are scoring</a>
-          <div id="scoringLink" class="text-center mb-3" style="display:none;">
-            <a href="scoring.html">See how other schools are scoring</a>
           </div>
 
           <div class="row g-3">
